methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
def run() {
    ^